# PathSpace

./: .clang-format  .gitignore  .rules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  collected_sources.txt  compile_commands.json  include_tests  init-git.sh  log.txt  out.json  out.txt  valgrind.txt
benchmarks/: CMakeLists.txt
benchmarks/history/: undo_journal_benchmark.cpp
benchmarks/ui/: path_renderer2d_benchmark.cpp  widget_pipeline_benchmark.cpp
src/: BasePath.cpp  CMakeLists.txt  GlobName.cpp  GlobPath.cpp  Path.cpp  PathSpace.cpp
src/core/: BasePath.cpp  GlobName.cpp  GlobPath.cpp  Path.cpp  PathSpace.cpp
src/path/: ConcreteName.cpp  ConcretePath.cpp  ConcretePathIterator.cpp  GlobName.cpp  GlobPath.cpp  GlobPathIterator.cpp  Path.cpp
src/pathspace/: CMakeLists.txt  PathSpace.cpp  PathSpace.hpp  PathSpaceBase.hpp  PathSpaceLeaf.cpp  PathSpaceLeaf.hpp  PathSpaceVisit.cpp
src/pathspace/app/: AppPaths.cpp
src/pathspace/cache/: CacheEntry.hpp  CacheManager.hpp  SimpleCache.cpp  SimpleCache.hpp
src/pathspace/core/: BlockOptions.hpp  Cache.cpp  Cache.hpp  Capabilities.hpp  ElementType.hpp  Error.hpp  ExecutionCategory.hpp  ExecutionOptions.hpp  ExpectedShim.cpp  ExtractOptions.hpp  In.hpp  InOptions.hpp  InsertOptions.hpp  InsertReturn.hpp  Leaf.cpp  Leaf.hpp  Node.hpp  NodeData.cpp  NodeData.hpp  NotificationSink.hpp  Out.hpp  OutOptions.hpp  PathSpaceContext.hpp  PathSpaceLeaf.cpp  PathSpaceLeaf.hpp  PathSpaceRegistry.cpp  PathSpaceRegistry.hpp  PodPayload.hpp  ReadOptions.hpp  TaskRegistration.hpp  TaskToken.hpp  WaitMap.cpp  WaitMap.hpp  WatchRegistry.hpp
src/pathspace/distributed/: RemoteExecutionRegistry.hpp  RemoteMountLoopback.hpp  RemoteMountManager.cpp  RemoteMountManager.hpp  RemoteMountProtocol.cpp  RemoteMountProtocol.hpp  RemoteMountServer.cpp  RemoteMountServer.hpp  RemoteMountTls.cpp  RemoteMountTls.hpp  TypedPayloadBridge.cpp  TypedPayloadBridge.hpp
src/pathspace/history/: CowSubtreePrototype.cpp  CowSubtreePrototype.hpp  UndoHistoryInspection.cpp  UndoHistoryInspection.hpp  UndoHistoryMetadata.cpp  UndoHistoryMetadata.hpp  UndoHistoryUtils.cpp  UndoHistoryUtils.hpp  UndoJournalEntry.cpp  UndoJournalEntry.hpp  UndoJournalPersistence.cpp  UndoJournalPersistence.hpp  UndoJournalState.cpp  UndoJournalState.hpp  UndoSavefileCodec.cpp  UndoSavefileCodec.hpp  UndoSnapshotCodec.cpp  UndoSnapshotCodec.hpp  UndoableSpace.cpp  UndoableSpace.hpp  UndoableSpaceHistory.cpp  UndoableSpacePersistence.cpp  UndoableSpaceSavefile.cpp  UndoableSpaceState.hpp  UndoableSpaceTransactions.cpp
src/pathspace/inspector/: InspectorAcl.cpp  InspectorAcl.hpp  InspectorDemoData.cpp  InspectorDemoData.hpp  InspectorHttpServer.cpp  InspectorHttpServer.hpp  InspectorMailboxMetrics.cpp  InspectorMailboxMetrics.hpp  InspectorMetricUtils.hpp  InspectorRemoteMount.cpp  InspectorRemoteMount.hpp  InspectorSearchMetrics.cpp  InspectorSearchMetrics.hpp  InspectorSnapshot.cpp  InspectorSnapshot.hpp  InspectorStreamMetrics.cpp  InspectorStreamMetrics.hpp  InspectorUiAssets.cpp  InspectorUiAssets.hpp  InspectorUsageMetrics.cpp  InspectorUsageMetrics.hpp  PaintScreenshotCard.cpp  PaintScreenshotCard.hpp
src/pathspace/io/: IoEventsSerialization.cpp  IoTrellis.cpp
src/pathspace/layer/: BoundedPathSpace.hpp  PathAlias.hpp  PathFileSystem.cpp  PathFileSystem.hpp  PathIO.cpp  PathIO.hpp  PathIODeviceDiscovery.hpp  PathIOGamepad.hpp  PathIOKeyboard.hpp  PathIOMice.hpp  PathIOMouse.hpp  PathIOPointerMixer.hpp  PathIOStdOut.hpp  PathSpaceTrellis.cpp  PathSpaceTrellis.hpp  PathSpaceTrellisTypes.hpp  (+4 more)
src/serialization/: InputData.cpp
src/type/: InputData.cpp
tests/: CMakeLists.txt  catch.cpp  main.cpp  test_main.cpp  typeinfo.cpp
tests/app/: test_AppPaths.cpp
tests/fixtures/: pathspace_dump_json_demo.json
tests/scripts/: run-test-with-logs.sh
tests/tools/: html_canvas_dump.cpp  pathspace_html_server_embed.cpp  pathspace_serve_html_testutil.py  test_declarative_button_dump.py  test_history_cli_roundtrip_dashboard.py  test_paint_example_diagnostics_ingest.py  test_pathspace_dump_json.py  test_pathspace_html_server_embed_smoke.py  test_pathspace_serve_html_google.py  test_pathspace_serve_html_http.py  test_pathspace_serve_html_sse.py
tests/ui/: DeclarativeTestUtils.hpp  test_AppBootstrap.cpp  test_BackendAdapters.cpp  test_BackendAdaptersMetal.mm  test_Builders.cpp  test_DeclarativePaintSurface.cpp  test_DeclarativeRuntime.cpp  test_DeclarativeSceneLifecycle.cpp  test_DeclarativeScreenshot.cpp  test_DeclarativeScreenshotHelper.cpp  test_DeclarativeTheme.cpp  test_DeclarativeWidgets.cpp  test_DiagnosticsRuntime.cpp  test_FontResources.cpp  test_HtmlAdapter.cpp  test_HtmlAssetSerialization.cpp  test_HtmlPresent.cpp  test_HtmlReplay.cpp  test_InputTask.cpp  test_PaintExampleNew.cpp  test_PathRenderer2D.cpp  test_PathRenderer2DMetal.mm  test_PathSurfaceSoftware.cpp  test_PathWindowView.cpp  test_PathWindowView_Metal.mm  test_ProgressiveSurfaceBuffer.cpp  test_RendererFaultInjection.cpp  test_SceneHelpers.cpp  test_SceneHitTest.cpp  test_SceneSnapshotBuilder.cpp  test_ScreenshotOverlay.cpp  test_SurfaceCacheWatch.cpp  test_SurfaceDescValidation.cpp  test_TextBuilder.cpp  test_WidgetBindingsText.cpp  test_WidgetChildren.cpp  test_WidgetEmptyNodes.cpp  test_WidgetEventTrellis.cpp  test_WidgetGallery.cpp  test_WidgetInput.cpp  (+3 more)
tests/unit/: PathSpaceTestHelper.hpp  test_BasePath.cpp  test_BoundedPathSpace.cpp  test_Capabilities.cpp  test_GlobName.cpp  test_GlobPath.cpp  test_Path.cpp  test_PathRoot.cpp  test_PathSpace.cpp  test_PathSpace_Reflection.cpp  test_PathSpace_cache.cpp  test_PathSpace_copy.cpp  test_PathSpace_execution.cpp  test_PathSpace_extract.cpp  test_PathSpace_indexed.cpp  test_PathSpace_insert.cpp  test_PathSpace_internal.cpp  test_PathSpace_listChildren.cpp  test_PathSpace_multithreading.cpp  test_PathSpace_multithreading_scenario.cpp  test_PathSpace_nesting.cpp  test_PathSpace_pod_fastpath.cpp  test_PathSpace_read.cpp  test_PathSpace_retarget.cpp  test_PathSpace_snapshot.cpp  test_PathSpace_visit.cpp  test_SpacePath.cpp  test_ValueHandleGuards.cpp
(+1670 files in other folders)
